--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -148,29 +148,26 @@ game.StarterGui:SetCore("SendNotification", {
 	Duration = math.huge;
 })
 asdqw()
---Auto execute highly recommended (use it)
-gui = game.CoreGui.RobloxPromptGui.promptOverlay:WaitForChild("ErrorPrompt")
+local Player = game.Players.LocalPlayer    
+local Http = game:GetService("HttpService")
+local TPS = game:GetService("TeleportService")
+local Api = "https://games.roblox.com/v1/games/"
 
-gui.Size = UDim2.new(0, 400, 0, 230)
+local _place,_id = game.PlaceId, game.JobId
+-- Asc for lowest player count, Desc for highest player count
+local _servers = Api.._place.."/servers/Public?sortOrder=Asc&limit=10"
+function ListServers(cursor)
+   local Raw = game:HttpGet(_servers .. ((cursor and "&cursor="..cursor) or ""))
+   return Http:JSONDecode(Raw)
+end
 
-leave = gui.MessageArea.ErrorFrame.ButtonArea.LeaveButton
+time_to_wait = 2 --seconds
 
-gui.MessageArea.MessageAreaPadding.PaddingTop = UDim.new(0,-20)
-gui.MessageArea.ErrorFrame.ErrorFrameLayout.Padding = UDim.new(0, 5)
-
-gui.MessageArea.ErrorFrame.ButtonArea.ButtonLayout.CellPadding = UDim2.new(0, 0, 0, 5)
-
-rejoin = leave:Clone()
-rejoin.Parent = leave.Parent
-rejoin.ButtonText.Text = "Rejoin"
-
-Players = game:GetService("Players")
-TeleportService = game:GetService("TeleportService")
-
-rejoin.MouseButton1Up:Connect(function()
-	if #Players:GetPlayers() <= 1 then
-		TeleportService:Teleport(game.PlaceId, Players.LocalPlayer)
-	else
-		TeleportService:TeleportToPlaceInstance(game.PlaceId, game.JobId, Players.LocalPlayer)
-	end
-end)
+-- choose a random server and join every 10 sec
+while wait(time_to_wait) do
+   --freeze player before teleporting to prevent synapse crash?
+   Player.Character.HumanoidRootPart.Anchored = true
+   local Servers = ListServers()
+   local Server = Servers.data[math.random(1,#Servers.data)]
+   TPS:TeleportToPlaceInstance(_place, Server.id, Player)
+end
